<resources>
    <string name="app_name">Shoes App</string>

    <!-- login page -->

    <string name="mail_hint">enter your email</string>
    <string name="pass_hint">enter your password</string>
    <string name="email_tv">Email</string>
    <string name="pass_tv">Password</string>
    <string name="log_in_bt">Login</string>
    <string name="sign_up_bt">signup</string>


    <!-- card view -->
    <string name="shoe_example_name">Flat</string>
    <string name="shoe_example_company">Adidas</string>
    <string name="shoe_example_size">43</string>
    <string name="shoe_example_detail">its a unique flat shoe with unique design</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- shoe list -->
   <string name="shoe_name_hint">enter shoe name </string>
    <string name="shoe_name">Name </string>

    <string name="shoe_size_hint">enter shoe size </string>
    <string name="shoe_size">Size </string>

    <string name="shoe_desc_hint">enter shoe Description </string>
    <string name="shoe_desc">Description </string>

    <string name="shoe_company_hint">enter shoe Company </string>
    <string name="shoe_company">Company </string>

    <string name="bt_shoe_add">ADD </string>
    <string name="bt_shoe_cancel">Cancel </string>



    <!--Menu -->

    <string name="menu_item_log_out" >Log out </string>

    <string name="login_tv_warning">if you do not have an account
         please press on signup button
        with new mail and password</string>

    <string name="shoe_store_welcome" >Shoe Store </string>
    <string name="shoe_store_welcome_paragraph" >welcome to our App
     \nWe wish you a happy experience
      \n—Development team—</string>

    <string name="bt_next_weclome">Continue</string>

    <string name="inst1">
      if you want to logout press on menu and choose the logout option
        \nthen you will be logged out ,\nbut be attention if you close the app
        all your data will go away

      </string>

      <string name="inst2">shoe list screen help you to
      see all shoes you ordered\nin first use its empty to fill it \npress on the button with plus icon
       to open shoe details screen

      </string>

</resources>