<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.shoedetail.ShoeDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shoe"
        android:backgroundTint="#80FFFFFF"
        android:backgroundTintMode="src_over">

        <EditText
            android:id="@+id/editTextShoeDesc"
            android:layout_width="270dp"
            android:layout_height="76dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/shoe_desc_hint"
            android:inputType="textMultiLine"

            android:singleLine="false"
            android:maxLines="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewShoeDesc" />

        <TextView
            android:id="@+id/textViewShoeDesc"
            android:layout_width="147dp"
            android:layout_height="31dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="15dp"
            android:text="@string/shoe_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextShoeSize" />

        <EditText
            android:id="@+id/editTextShoeCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:lines="3"
            android:hint="@string/shoe_company_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewShoeCompany" />

        <TextView
            android:id="@+id/textViewShoeSize"
            android:layout_width="147dp"
            android:layout_height="31dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="15dp"
            android:text="@string/shoe_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextShoeCompany" />

        <EditText
            android:id="@+id/editTextShoeSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/shoe_size_hint"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewShoeSize" />

        <TextView
            android:id="@+id/textViewShoeCompany"
            android:layout_width="147dp"
            android:layout_height="31dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="15dp"
            android:text="@string/shoe_company"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextShoeName" />

        <TextView
            android:id="@+id/textViewShoeName"
            android:layout_width="147dp"
            android:layout_height="31dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="100dp"
            android:text="@string/shoe_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextShoeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/shoe_name_hint"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewShoeName" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="60dp"
            android:text="@string/bt_shoe_cancel"
            app:layout_constraintStart_toEndOf="@+id/buttonAddShoe"
            app:layout_constraintTop_toBottomOf="@+id/editTextShoeDesc" />

        <Button
            android:id="@+id/buttonAddShoe"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="60dp"
            android:text="@string/bt_shoe_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextShoeDesc" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>


</layout>