<?xml version="1.0" encoding="utf-8"?>
<layout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >


<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shoe"
        android:backgroundTint="#80FFFFFF"
        android:backgroundTintMode="src_over"
        >

        <EditText
            android:id="@+id/editTextTextEmail"
            android:layout_width="307dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="52dp"
            android:ems="10"
            android:hint="@string/mail_hint"
            android:inputType="textPersonName"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="307dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="52dp"
            android:ems="10"
            android:hint="@string/pass_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPassword" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="97dp"
            android:layout_marginEnd="319dp"
            android:layout_marginBottom="5dp"
            android:text="@string/email_tv"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="287dp"
            android:text="@string/pass_tv"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmail" />

        <Button
            android:id="@+id/button_log_in"
            android:layout_width="138dp"
            android:layout_height="50dp"
            android:layout_marginTop="62dp"
            android:layout_marginEnd="29dp"
            android:text="@string/log_in_bt"
            app:layout_constraintEnd_toStartOf="@+id/button_sign_up"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="138dp"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="52dp"
            android:text="@string/sign_up_bt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

        <TextView
            android:id="@+id/textView_warring"
            android:layout_width="292dp"
            android:layout_height="103dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="24dp"
            android:text="@string/login_tv_warning"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_log_in" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>

</layout>
