<?xml version="1.0" encoding="utf-8"?>
<layout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_shoe"
            android:layout_width="386dp"
            android:layout_height="169dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="7dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="158dp"
                android:background="@color/card_background_care">

                <TextView
                    android:id="@+id/textView_shoe_desc"
                    android:layout_width="214dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="43dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/shoe_example_detail"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toBottomOf="@+id/textview_shoe_company_name" />

                <TextView
                    android:id="@+id/textview_shoe_company_name"
                    android:layout_width="101dp"
                    android:layout_height="23dp"
                    android:layout_marginStart="43dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/shoe_example_company"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView_shoe_name" />

                <TextView
                    android:id="@+id/textView_shoe_name"
                    android:layout_width="101dp"
                    android:layout_height="23dp"
                    android:layout_marginStart="43dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/shoe_example_name"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="128dp"
                    android:layout_height="137dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="9dp"
                    android:src="@drawable/shoeimgjpg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/textView_shoe_size"
                    android:layout_width="101dp"
                    android:layout_height="23dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/shoe_example_size"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textview_shoe_company_name"
                    app:layout_constraintTop_toBottomOf="@+id/textView_shoe_name" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>